# raytracer

./: .gitignore  TODO.MD  proj1.tgz
boids/: .gitignore  Boids.cpp  Makefile  README.md  sample.in  viewer.cpp
common/: .gitignore  Makefile  README-rasterizer.md  Rasterizer.cpp  Rasterizer.h  Settings.cpp  Settings.h  Surfaces.cpp  Surfaces.h  Test.cpp  Test.h  Tracer.cpp  Tracer.h  grade-rasterizer.txt
inputs/: balls.nff
mesh_smoothing/: .gitignore  Makefile  README.md  grade.txt
proj1/: Makefile  Polygon.cpp  Polygon.h  README.md  RayTracer.cpp  RayTracer.h  SettingsNFF.cpp  SettingsNFF.h  Sphere.h  Surface.cpp  Triangle.cpp  grade.txt
proj1/inputs/: rotated-tetra-3.nff
proj1/src/: Makefile  Polygon.cpp  Polygon.h  README.md  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  SettingsNFF.cpp  SettingsNFF.h  Triangle.cpp  Triangle.h  main.cpp
proj2/: Makefile  Polygon.cpp  Polygon.h  README.md  Ray.h  RayTracer.cpp  RayTracer.h  Settings.cpp  Settings.h  SettingsNFF.cpp  SettingsNFF.h  Sphere.cpp  Surface.cpp  Surface.h  Surfaces.cpp  Surfaces.h  Test.cpp  Test.h  Tracer.cpp  Tracer.h  Triangle.h  grade.txt  main.cpp
proj3/: Makefile  README.md  grade.txt  main.cpp
proj4/: Makefile  README.md  grade.txt  io.cpp  io.h  main.cpp
proj5/: Boids.cpp  Boids.h  Makefile  fishtank.cpp  grade.txt  makefile
proj6/: .gitignore  Makefile  README.md  code.cpp  grade.txt  stub.cpp
rendering/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README-raytracer.md  README.md  README_BUILD.md  Test.cpp  build.sh  format.sh  grade-raytracer.txt  test.sh
rendering/cmake/: set_compiler_options.cmake
rendering/inputs/: my.nff
rendering/rendering/: CMakeLists.txt  Makefile
rendering/rendering/docs/: doxygen.config
rendering/rendering/src/: Rasterizer.cpp  Rasterizer.h  Settings.h  Surfaces.cpp  Surfaces.h  Test.cpp  Test.h  Tracer.cpp  Tracer.h  main-rasterizer.cpp  main-raytracer.cpp
rendering/rendering/tests/: CMakeLists.txt  TestPolygon.cpp  TestTriangle.cpp
seamcarving/: .gitignore  code.cpp
